# IrohaEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: install.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
documentation/: CMakeLists.txt
documentation/pages/: about.dox
include/greeter/: greeter.h
source/: greeter.cpp
source/engine/: CMakeLists.txt
source/engine/greeter/: greeter.cpp  greeter.h
source/standalone/: CMakeLists.txt  main.cpp
source/tests/: CMakeLists.txt
source/tests/engine/: greeter.cpp
standalone/source/: main.cpp
test/source/: greeter.cpp
